# belajar-python

./: README.md  requirements.txt
calculator/: main.py  pyproject.toml
image-classifier/: main.py  requirements.txt
resume-critique/: .env  main.py  pyproject.toml
